Add Nav and Banner to pages

--- a/about-annika.html
+++ b/about-annika.html
@@ -25,7 +25,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="slideshow">
+                <div class="intro">
 
                 </div>
             </div><!-- No spaces
