--- a/contact-us.html
+++ b/contact-us.html
@@ -12,8 +12,8 @@
             <div class="header">
                 <div class="banner"> 
                     <a href="homepage.html">
-                        <img src="/AMlogo.png" alt="Annika Marriner Photography Logo" class="center"></a>
-                        
+                    <img src="/AMlogo.png" alt="Annika Marriner Photography Logo" class="center"></a>
+                    
                     <div class="navigation">
                         <div class="topnav">
                             <a  href="homepage.html">Home</a>
@@ -25,7 +25,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="slideshow">
+                <div class="intro">
 
                 </div>
             </div><!-- No spaces
