--- a/ourblog.html
+++ b/ourblog.html
@@ -25,7 +25,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="slideshow">
+                <div class="intro">
 
                 </div>
             </div><!-- No spaces
