--- a/ourcustomers.html
+++ b/ourcustomers.html
@@ -25,9 +25,8 @@
                           </div>
                     </div>
                 </div>
-                <div class="slideshow">
-
                 </div>
+                <div class="intro"></div>
             </div><!-- No spaces
          --><div class="content">
 
