--- a/testimonials.html
+++ b/testimonials.html
@@ -11,21 +11,12 @@
         <div class="container">
             <div class="header">
                 <div class="banner"> 
-                    <a href="homepage.html">
-                        <img src="/AMlogo.png" alt="Annika Marriner Photography Logo" class="center"></a>
-                        
+                    <img src="/AMlogo.png" alt="Annika Marriner Photography Logo" class="center">
                     <div class="navigation">
-                        <div class="topnav">
-                            <a  href="homepage.html">Home</a>
-                            <a href="ourwork.html">Our Work</a>
-                            <a href="ourcustomers.html">Our Customer</a>
-                            <a href="about-annika.html">About Annika</a>
-                            <a href="pricing.html">Pricing</a>
-                            <a href="contact-us.html">Contact Us</a>
-                          </div>
+                        hello
                     </div>
                 </div>
-                <div class="slideshow">
+                <div class="intro">
 
                 </div>
             </div><!-- No spaces
