Add flower images at bottom of page

--- a/ourcustomers.html
+++ b/ourcustomers.html
@@ -71,7 +71,17 @@
               
             </div>
           </div>
-
+          <div class="row">
+            <div class="column">
+              <img src="images/redflower.png" alt="Snow" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/orangeflower.png" alt="Forest" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/pinkflower.png" alt="Mountains" style="width:100%">
+            </div>
+          </div>
         </div>
 
 
