--- a/about-annika.html
+++ b/about-annika.html
@@ -38,17 +38,37 @@
         <!-- content section html -->
 <div class="text_heading">
    
-        <div class="heading-text">
+        <div class="headingtext-aboutannika">
             About Annika
            </div>
 
 
-<div class="content">
+<div class="content-aboutannika">
     <img src="images/aboutannika.png" alt="image of Annika">
 
     <div class="about_text">
-        Annika was first introduced to photography at an early age. 
+        Annika was first introduced to photography at <br>
+        an early age when she was gifted a camera for <br>
+        her birthday. She initiall developed her passion <br>
+        for photography by taking photographs of nature <br>
+        including birds and flora. On leaving school she <br>
+        continued with this passion as a side activity while <br>
+        also working full time. Five years ago she decided to <br>
+        concentrate soley on photography and started her <br>
+        own business. Over recent years she has developed  <br>
+        her skills in the color gel photography. Annika <br>
+        particulary loves photography animals, families,  <br>
+        and children and is continually grateful to be<br>
+        given the oportunity to share her clients lives  <br>
+        and capture their special moments.She has won  <br>
+        multiple awards for her work and continues to<br>
+        grow and push herself as a photographer.<br>
+
+        <button class="getintouch-about"><a href="contact-us.html">Get In Touch</a></button>
     </div>
+
+
+ 
 
 </div>
 
