Style and update .dropdown-menu

--- a/homepage.html
+++ b/homepage.html
@@ -28,9 +28,10 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Occasions</a></li>
+                  <li><a class="dropdown-item" href="#">Pets</a></li>
+                  <li><a class="dropdown-item" href="#">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="#">Nature</a></li>
                 </ul>
               </div>
               <a href="ourcustomers.html">Our Customer</a>
@@ -40,9 +41,7 @@
                   Pricing
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">FAQ's</a></li>
                 </ul>
               </div>
               <a href="contact-us.html">Contact Us</a>
@@ -89,6 +88,7 @@
         <!--creating the button for get in touch on the homepage-->
         
           <button class="getintouch-button center"><a href="contact-us.html">Get In Touch</a></button>
+
         </div>
 
 
