Update Navigation on all pages

--- a/about-annika.html
+++ b/about-annika.html
@@ -23,17 +23,33 @@
           <div class="navigation">
             <div class="topnav">
               <a href="homepage.html">Home</a>
-              <a href="ourwork.html">Our Work</a>
+              <div class="dropdown">
+                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Our Work
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
+                </ul>
+              </div>
               <a href="ourcustomers.html">Our Customer</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="pricing.html">Pricing</a>
+              <div class="dropdown">
+                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pricing
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
+                </ul>
+              </div>
               <a href="contact-us.html">Contact Us</a>
             </div>
           </div>
         </div>
       </div>
-        </div>
-        </div>
+      </div>
 
         <!-- content section html -->
 <div class="text_heading">
