--- a/homepage.html
+++ b/homepage.html
@@ -28,10 +28,10 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Occasions</a></li>
-                  <li><a class="dropdown-item" href="#">Pets</a></li>
-                  <li><a class="dropdown-item" href="#">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="#">Nature</a></li>
+                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
                 </ul>
               </div>
               <a href="ourcustomers.html">Our Customer</a>
@@ -41,13 +41,14 @@
                   Pricing
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">FAQ's</a></li>
+                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
               <a href="contact-us.html">Contact Us</a>
             </div>
           </div>
         </div>
+      </div>
       </div>
         <!--coding for slideshow noted at the beginning of the slideshow page-->
         <div class="slideshow">
