--- a/pricing.html
+++ b/pricing.html
@@ -23,60 +23,72 @@
           <div class="navigation">
             <div class="topnav">
               <a href="homepage.html">Home</a>
-              <a href="ourwork.html">Our Work</a>
+              <div class="dropdown">
+                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Our Work
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
+                </ul>
+              </div>
               <a href="ourcustomers.html">Our Customer</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="pricing.html">Pricing</a>
+              <div class="dropdown">
+                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pricing
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
+                </ul>
+              </div>
               <a href="contact-us.html">Contact Us</a>
             </div>
           </div>
         </div>
       </div>
-        <!--coding for slideshow noted at the beginning of the slideshow page-->
-        <div class="slideshow">
-          <!--Bootstrap Carousel-->
-          <div id="slideshow" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#slideshow" data-bs-slide-to="0" class="active" aria-current="true"
-                aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#slideshow" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#slideshow" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <!--adds the appropriate images into the slideshow-->
-              <div class="carousel-item active">
-                <img src="images/slideimg.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="images/slideimg1.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="images/slideimg2.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-      <!-- No spaces
-         -->
-      <!--creating content part of the homepage-->
-      <div class="content">
-        <!---creating the tagline which appears in the homepage-->
-        <div class="tagline">
-          <div class="tagline__upper tagline__lower">
-            <h2>Creative | Inspiring | Natural</h2> 
-            <h1>Enjoy your experience with us</h1>
-          </div>
-        </div>
-        <!--creating the button for get in touch on the homepage-->
-        
-          <button class="getintouch-button center"><a href="contact-us.html">Get In Touch</a></button>
-        </div>
+        <!-- content section html -->
+<div class="text_heading">
+   
+        <div class="headingtext-aboutannika">
+            About Annika
+           </div>
 
 
+<div class="content-aboutannika">
+    <img src="images/aboutannika.png" alt="image of Annika">
+
+    <div class="about_text">
+        Annika was first introduced to photography at <br>
+        an early age when she was gifted a camera for <br>
+        her birthday. She initiall developed her passion <br>
+        for photography by taking photographs of nature <br>
+        including birds and flora. On leaving school she <br>
+        continued with this passion as a side activity while <br>
+        also working full time. Five years ago she decided to <br>
+        concentrate soley on photography and started her <br>
+        own business. Over recent years she has developed  <br>
+        her skills in the color gel photography. Annika <br>
+        particulary loves photography animals, families,  <br>
+        and children and is continually grateful to be<br>
+        given the oportunity to share her clients lives  <br>
+        and capture their special moments.She has won  <br>
+        multiple awards for her work and continues to<br>
+        grow and push herself as a photographer.<br>
+
+        <button class="getintouch-about"><a href="contact-us.html">Get In Touch</a></button>
+    </div>
+
+
+ 
+
+</div>
 
 <!--footer html section-->
-        <div class="footer-homepage row">
+        <div class="footer-aboutannika row">
           <div class="contactus-footer col">Contact us
           <div class="footer-options">
             Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
@@ -117,8 +129,7 @@
     <script src="main_vue_filters.js"></script>
 
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 
 </html>
