--- a/ourcustomers.html
+++ b/ourcustomers.html
@@ -17,14 +17,19 @@
   <div class="container-fluid">
     <div class="app">
       <div class="header">
-<div class="banner_nav sticky-top">
         <div class="banner">
+          <!--adding "burger" navigation for mobile devices --- ensuring responsiveness -->
+          <a href="javascript:void(0);" class="icon" onclick="openMobileNav()">
+            <i class="fa fa-bars"></i>
+          </a>
+
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
               <a href="homepage.html">Home</a>
-              <div class="dropdown">
-                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              
+              <div class="dropdown dropdown--OurWork">
+                <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -36,7 +41,8 @@
               </div>
               <a href="ourcustomers.html">Our Customer</a>
               <a href="about-annika.html">About Annika</a>
-              <div class="dropdown">
+
+              <div class="dropdown dropdown--Pricing">
                 <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   Pricing
                 </a>
@@ -50,6 +56,7 @@
         </div>
       </div>
       </div>
+
 
  <!-- content section html -->
  <div class="text_heading">
@@ -66,22 +73,23 @@
       <div class="content-ourcustomers">
         <div class="slideshow-ourcustomers">
             <!--Bootstrap Carousel-->
-            <div id="slideshow-ourcustomers" class="carousel slide" data-bs-ride="carousel">
+            <div id="customer-feedback" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#slideshow-ourcustomers" data-bs-slide-to="0" class="active" aria-current="true"
                   aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#slideshow-ourcustomers" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#slideshow-ourcustomers" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
+
               <div class="carousel-inner"> -->
                 <!--adds the appropriate images into the slideshow-->
-                <div class="carousel-item active">
+                <div class="carousel-item active customer-feedback">
                   <img src="images/slide0.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item customer-feedback">
                   <img src="images/slide1.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item cus">
                   <img src="images/slide2.png" class="d-block w-100" alt="...">
                 </div>
               </div>
