--- a/contact-us.html
+++ b/contact-us.html
@@ -31,10 +31,10 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
-                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
-                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
+                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
               <a href="ourcustomers.html">Our Customer</a>
