--- a/contact-us-submit.html
+++ b/contact-us-submit.html
@@ -33,10 +33,10 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
-                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
-                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
+                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
               <a href="ourcustomers.html">Our Customer</a>
@@ -47,7 +47,7 @@
                   Pricing
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
+                  <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
               <a href="contact-us.html">Contact Us</a>
