--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
   <!--links to bootstrap in order to include the server in my coding-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,10 +33,10 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
-                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
-                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
+                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
               <a href="ourcustomers.html">Our Customer</a>
@@ -47,7 +47,7 @@
                   Pricing
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
+                  <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
               <a href="contact-us.html">Contact Us</a>
