update based on feedback

--- a/contemporary.html
+++ b/contemporary.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="photography.css">
-
 </head>
 
 <body>
@@ -39,20 +38,74 @@
                   <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
-              <a href="ourcustomers.html">Our Customer</a>
+              <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
+              <a href="contact-us.html">Pricing</a>
 
-              <div class="dropdown dropdown--Pricing">
-                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Pricing
+              <div class="dropdown dropdown--ContactUs">
+                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact Us
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="contact-us.html">Contact Us</a>
+              <a href="ourblog.html">Our Blog</a>
             </div>
           </div>
         </div>
       </div>
-      </div
+      </div>
+    <!--footer html section-->
+    <div class="footer footer--homepage row">
+      <div class="footer__contact_us contactus-footer col">Contact us
+      <div class="footer-option">
+        Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
+        <br>
+        Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
+      </div>
+    </div>
+
+
+    <div class="footer about-footer col">About 
+      <div class="footer-option">
+        <a href="about-annika.html">About Annika Page</a>
+        <br>
+        <a href="termsconditions.html">Terms & Conditions</a>      
+        <br>
+        <a href="FAQ.html">Frequently asked questions</a>         
+      </div>
+    </div>
+
+
+
+    <div class="footer information-footer col">Information
+      <div class="footer-option">
+        <a href="about-annika.html">About Annika Page</a>
+        <br>
+        <a href="privacypolicy.html">Privacy Policy</a>      
+        <br>
+        <a href="termsconditions.html">Terms and Conditions</a>         
+      </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- JS for VUE and Airtable -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
+<!--allows us to display and get data from airtable-->
+<script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
+<!--allows us to display dynamic data easily-->
+
+<!--Custome JS for VUE -->
+<script src="VUE.js"></script>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+</body>
+
+</html>
