--- a/termsconditions.html
+++ b/termsconditions.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="photography.css">
-
 </head>
 
 <body>
@@ -33,26 +32,117 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#occasions.html">Occasions</a></li>
-                  <li><a class="dropdown-item" href="#pets.html">Pets</a></li>
-                  <li><a class="dropdown-item" href="#contemporary.html">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="#nature.html">Nature</a></li>
+                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="pets.html">Pets</a></li>
+                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
-              <a href="ourcustomers.html">Our Customer</a>
+              <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
+              <a href="contact-us.html">Pricing</a>
 
-              <div class="dropdown dropdown--Pricing">
-                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Pricing
+              <div class="dropdown dropdown--ContactUs">
+                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact Us
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
+                  <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="contact-us.html">Contact Us</a>
+              <a href="ourblog.html">Our Blog</a>
             </div>
           </div>
         </div>
       </div>
       </div>
+
+ <!-- content section html -->
+ <div class="text_heading">
+   
+    <div class="heading-TC">
+        Terms and Conditions
+       </div>
+       <div class="TC-text">
+           Transferring your digital files <br>
+           We transfer your digital files to you, via WeTransfer you will receive and email asking you <br>
+           to download them to your computer. These files are printable to the specific size you have ordered <br>
+           are often state this. They will be high resolution printable files which are best downloaded onto a <br>
+           storage drive that sits beside your computer, or on your computer with a lot of drive space, but definitley<br>
+           not on a device such as a phone.
+           <br>
+           <br>
+           we send low resolution files, which are good for social purposes with every high res file, so the name of this file <br>
+           will be "low res" these are not printable and are only goodd for email , instragram, or facebook etc... <br>
+           <br>
+           Saving images<br>
+           We retain all ordered images, and these are files off-site from the studio in case of a fire, there is considerable <br>
+           expense in doing this, so if you do happen to have an insurance claim on our art peices, you can always contact <br>
+           the studio for a replacement invoice which your insurance company can pay for. Some images of some shoots may be retained<br>
+           for a particular reason, but we cannot guarentee your will be amongst these, if you did not actually order them at the <br>
+           veiwing and purchasing session.<br>
+           <br>
+           Using your own devices while we are shooting<br>
+           Please understand that we are a business and you are investing in our services, so please respect our request for you to <br>
+           allow us to capture this special event in your life, and capture your other events with your devices (camera, phones, and videos). <br>
+           If you do bring out your devices, myself or my assistant may ask you to put them away, and reserve the right to ask you to <br>
+           leave the studio.<br>
+           <br> 
+        </div>
+    </div>
+
+             
+
+<!--footer html section-->
+<div class="footer footer--homepage row">
+  <div class="footer__contact_us contactus-footer col">Contact us
+  <div class="footer-option">
+    Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
+    <br>
+    Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
+  </div>
+</div>
+
+
+<div class="footer about-footer col">About 
+  <div class="footer-option">
+    <a href="about-annika.html">About Annika Page</a>
+    <br>
+    <a href="termsconditions.html">Terms & Conditions</a>      
+    <br>
+    <a href="FAQ.html">Frequently asked questions</a>         
+  </div>
+</div>
+
+
+
+<div class="footer information-footer col">Information
+  <div class="footer-option">
+    <a href="about-annika.html">About Annika Page</a>
+    <br>
+    <a href="privacypolicy.html">Privacy Policy</a>      
+    <br>
+    <a href="termsconditions.html">Terms and Conditions</a>         
+  </div>
+
+  </div>
+</div>
+
+</div>
+</div>
+
+<!-- JS for VUE and Airtable -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
+<!--allows us to display and get data from airtable-->
+<script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
+<!--allows us to display dynamic data easily-->
+
+<!--Custome JS for VUE -->
+<script src="VUE.js"></script>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+</body>
+
+</html>
