--- a/about-annika.html
+++ b/about-annika.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="photography.css">
-
 </head>
 
 <body>
@@ -39,24 +38,24 @@
                   <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
-              <a href="ourcustomers.html">Our Customer</a>
+              <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
+              <a href="contact-us.html">Pricing</a>
 
-              <div class="dropdown dropdown--Pricing">
-                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Pricing
+              <div class="dropdown dropdown--ContactUs">
+                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact Us
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="contact-us.html">Contact Us</a>
+              <a href="ourblog.html">Our Blog</a>
             </div>
           </div>
         </div>
       </div>
       </div>
-
         <!-- content section html -->
 <div class="text_heading">
    
@@ -71,18 +70,18 @@
     <div class="about_text">
         Annika was first introduced to photography at <br>
         an early age when she was gifted a camera for <br>
-        her birthday. She initiall developed her passion <br>
+        her birthday. She initially developed her passion <br>
         for photography by taking photographs of nature <br>
         including birds and flora. On leaving school she <br>
         continued with this passion as a side activity while <br>
         also working full time. Five years ago she decided to <br>
-        concentrate soley on photography and started her <br>
+        concentrate solely on photography and started her <br>
         own business. Over recent years she has developed  <br>
         her skills in the color gel photography. Annika <br>
         particulary loves photography animals, families,  <br>
         and children and is continually grateful to be<br>
         given the oportunity to share her clients lives  <br>
-        and capture their special moments.She has won  <br>
+        and capture their special moments. She has won  <br>
         multiple awards for her work and continues to<br>
         grow and push herself as a photographer.<br>
 
@@ -93,50 +92,56 @@
  
 
 </div>
-
 <!--footer html section-->
-        <div class="footer-aboutannika row">
-          <div class="contactus-footer col">Contact us
-          <div class="footer-options">
-            Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
-            <br>
-            Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
-          </div>
-        </div>
+<div class="footer footer--homepage row">
+  <div class="footer__contact_us contactus-footer col">Contact us
+  <div class="footer-option">
+    Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
+    <br>
+    Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
+  </div>
+</div>
 
 
-        <div class="about-footer col">About 
-          <div class="footer-options">
-            <a href="about-annika.html">About Annika Page</a>
-            <br>
-            <a href="termscondition.html">Terms & Conditions</a>      
-            <br>
-            <a href="FAQ.html">Frequently asked questions</a>         
-          </div>
-        </div>
+<div class="footer about-footer col">About 
+  <div class="footer-option">
+    <a href="about-annika.html">About Annika Page</a>
+    <br>
+    <a href="termsconditions.html">Terms & Conditions</a>      
+    <br>
+    <a href="FAQ.html">Frequently asked questions</a>         
+  </div>
+</div>
 
 
-    
-        <div class="socialmedia-footer col">Social Media
-          <div class="footer-options">
-    
-          </div>
-        </div>
 
-      </div>
-    </div>
-
-    <!-- JS for VUE and Airtable -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
-    <!--allows us to display and get data from airtable-->
-    <script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
-    <!--allows us to display dynamic data easily-->
-
-    <!--Custome JS for VUE -->
-    <script src="main_vue_filters.js"></script>
+<div class="footer information-footer col">Information
+  <div class="footer-option">
+    <a href="about-annika.html">About Annika Page</a>
+    <br>
+    <a href="privacypolicy.html">Privacy Policy</a>      
+    <br>
+    <a href="termsconditions.html">Terms and Conditions</a>         
+  </div>
 
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+</div>
+
+</div>
+</div>
+
+<!-- JS for VUE and Airtable -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
+<!--allows us to display and get data from airtable-->
+<script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
+<!--allows us to display dynamic data easily-->
+
+<!--Custome JS for VUE -->
+<script src="VUE.js"></script>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
 
 </html>
