--- a/contact-us.html
+++ b/contact-us.html
@@ -8,6 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -37,18 +38,19 @@
                   <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
-              <a href="ourcustomers.html">Our Customer</a>
+              <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
+              <a href="contact-us.html">Pricing</a>
 
-              <div class="dropdown dropdown--Pricing">
-                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Pricing
+              <div class="dropdown dropdown--ContactUs">
+                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact Us
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#FAQ.html">FAQ's</a></li>
+                  <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="contact-us.html">Contact Us</a>
+              <a href="ourblog.html">Our Blog</a>
             </div>
           </div>
         </div>
@@ -65,11 +67,11 @@
   <div class="content">
     <div class="text_heading_contactus">
       <div class="heading-text_contactus">
-          About Annika<br>
+          Contact Us<br>
           We'd love to hear from you
       </div>
       <div class="contact-form">
-          <form>
+          <form action="contact-us-submit.html">
             <div class="container contactUsForm">
               <div class="row">
                 <div class="col">
@@ -117,7 +119,7 @@
 <!--footer html section-->
 <div class="footer footer--homepage row">
   <div class="footer__contact_us contactus-footer col">Contact us
-  <div class="footer-options">
+  <div class="footer-option">
     Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
     <br>
     Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
@@ -126,10 +128,10 @@
 
 
 <div class="footer about-footer col">About 
-  <div class="footer-options">
+  <div class="footer-option">
     <a href="about-annika.html">About Annika Page</a>
     <br>
-    <a href="termscondition.html">Terms & Conditions</a>      
+    <a href="termsconditions.html">Terms & Conditions</a>      
     <br>
     <a href="FAQ.html">Frequently asked questions</a>         
   </div>
@@ -137,15 +139,19 @@
 
 
 
-<div class="footer socialmedia-footer col">Social Media
-  <div class="footer-options">
+<div class="footer information-footer col">Information
+  <div class="footer-option">
+    <a href="about-annika.html">About Annika Page</a>
+    <br>
+    <a href="privacypolicy.html">Privacy Policy</a>      
+    <br>
+    <a href="termsconditions.html">Terms and Conditions</a>         
+  </div>
 
   </div>
 </div>
 
 </div>
-
-  </div>
 </div>
 
 <!-- JS for VUE and Airtable -->
@@ -155,11 +161,11 @@
 <!--allows us to display dynamic data easily-->
 
 <!--Custome JS for VUE -->
-<script src="main_vue_filters.js"></script>
+<script src="VUE.js"></script>
 
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
 
 </html>
