--- a/homepage.html
+++ b/homepage.html
@@ -5,12 +5,11 @@
   <!--links to bootstrap in order to include the server in my coding-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <link rel="stylesheet" href="photography.css">
-
 </head>
 
 <body>
@@ -39,18 +38,19 @@
                   <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                 </ul>
               </div>
-              <a href="ourcustomers.html">Our Customer</a>
+              <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
+              <a href="contact-us.html">Pricing</a>
 
-              <div class="dropdown dropdown--Pricing">
-                <a href="ourwork.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Pricing
+              <div class="dropdown dropdown--ContactUs">
+                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact Us
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="contact-us.html">Contact Us</a>
+              <a href="ourblog.html">Our Blog</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
 <!--footer html section-->
         <div class="footer footer--homepage row">
           <div class="footer__contact_us contactus-footer col">Contact us
-          <div class="footer-options">
+          <div class="footer-option">
             Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
             <br>
             Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
@@ -112,10 +112,10 @@
 
 
         <div class="footer about-footer col">About 
-          <div class="footer-options">
+          <div class="footer-option">
             <a href="about-annika.html">About Annika Page</a>
             <br>
-            <a href="termscondition.html">Terms & Conditions</a>      
+            <a href="termsconditions.html">Terms & Conditions</a>      
             <br>
             <a href="FAQ.html">Frequently asked questions</a>         
           </div>
@@ -123,8 +123,10 @@
 
 
     
-        <div class="footer socialmedia-footer col">Social Media
-          <div class="footer-options">
+        <div class="footer information-footer col">Information
+          <div class="footer-option">
+            <a href="privacypolicy.html">Privacy Policy</a>           
+          </div>
     
           </div>
         </div>
