--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -59,55 +59,45 @@
  <!-- content section html -->
  <div class="text_heading">
    
-    <div class="heading-text">
-        Our Customers
+    <div class="heading-TC">
+        Privacy Policy
        </div>
-       <div class="sub-heading">
-           Our client base reaches a wide range of different people. Here at Annika Marriner <br>
-           Photography our aim is to satisfy every customer with pictures that will last a lifetime. 
+       <div class="TC-text">
+           This privacy policy incorporates information on how Annika Marriner Photography collects, uses, discloses and keeps <br>
+           secure your personal information <br>
+           <br>
+           1. Collection of personal information <br>
+           The information collected by Annika Marriner Photography from you assists us in personalising and improving the experience<br>
+           for our customers. Such information is utilised primarily to ensure supply of goods and services to you the customer.<br>
+           Such information includes:<br>
+            - name and address; <br>
+            - contact phone number; <br>
+            - email address;<br>
+            <br>
+           2. Use of personal information<br>
+           The primary use of personal information is to provide services listed on the website. However, we will use and disclose your <br>
+           personal information in accordance with the Privacy Act or if required to by law.<br>
+           <br>
+           3. Disclosure of personal information<br>
+           Annika Marriner photography may use and disclose your personal information for approved purposes and in a variety of ways<br>
+           associated with approved purposes. <br>
+           <br> 
+           4. Security and Quality of your personal information<br>
+           Annika Marriner photography will take resonable steps to ensure that any of your personal information that is collected,<br>
+           stored, used, or disclosed is accurate, complete and up to date.<br>
+           <br>
+           5. Access personal information<br>
+           Annika Marriner Photography shall take resonable steps to limit access to personal information<br>
+           <br>
+           6. Cookies and other technology<br>
+           Annika Marriner Photography utilises cookies and other technologies to assist in determining what components of our website<br>
+           are most popular, and to ensure that our online advertising is bringing customers to our products and services. Cookies may also <br>
+           be utilised to study traffic patterns and most importantly, to ensure that your experience in interacting with us is convenient.<br> 
+           <br>
         </div>
     </div>
-      <!--creating content part of the homepage-->
-      <div class="content-ourcustomers">
-        <div class="slideshow-ourcustomers">
-            <!--Bootstrap Carousel-->
-            <div id="customer-feedback" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#slideshow-ourcustomers" data-bs-slide-to="0" class="active" aria-current="true"
-                  aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#slideshow-ourcustomers" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#slideshow-ourcustomers" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              </div>
 
-              <div class="carousel-inner"> -->
-                <!--adds the appropriate images into the slideshow-->
-                <div class="carousel-item active customer-feedback">
-                  <img src="images/slide0.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item customer-feedback">
-                  <img src="images/slide1.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item cus">
-                  <img src="images/slide2.png" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              
-            </div>
-          </div>
-          <div class="row">
-            <div class="flowerimg">
-              <img src="images/redflower.png" alt="Snow" style="width:100%">
-            </div>
-            <div class="flowerimg">
-              <img src="images/orangeflower.png" alt="Forest" style="width:100%">
-            </div>
-            <div class="flowerimg">
-              <img src="images/pinkflower.png" alt="Mountains" style="width:100%">
-            </div>
-          </div>
-        </div>
-
-
+             
 
 <!--footer html section-->
 <div class="footer footer--homepage row">
